--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   get: ^4.6.6
   flutter_svg: ^2.0.9
   google_nav_bar: ^5.0.6
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   flutter_test:
