--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_svg: ^2.0.9
   google_nav_bar: ^5.0.6
   dotted_border: ^2.1.0
+  cached_network_image: ^3.3.0
+  intl_phone_number_input: ^0.7.3+1
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +69,7 @@ flutter:
     - assets/
     - assets/svg/
     - assets/png/
+    - assets/jpg/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
