--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   dotted_border: ^2.1.0
   cached_network_image: ^3.3.0
   intl_phone_number_input: ^0.7.3+1
+  flutter_local_notifications: ^16.1.0
 
 dev_dependencies:
   flutter_test:
