--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   cached_network_image: ^3.3.0
   intl_phone_number_input: ^0.7.3+1
   flutter_local_notifications: ^16.1.0
+  shimmer: ^3.0.0
+  flutter_otp_text_field: ^1.1.1
 
 dev_dependencies:
   flutter_test:
