--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_local_notifications: ^16.1.0
   shimmer: ^3.0.0
   flutter_otp_text_field: ^1.1.1
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
