--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   flutter_otp_text_field: ^1.1.1
   shared_preferences: ^2.2.2
   provider: ^6.1.1
+  image_picker: ^1.0.4
+  image_picker_windows: ^0.2.1+1
 
 dev_dependencies:
   flutter_test:
