--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   provider: ^6.1.1
   image_picker: ^1.0.4
   image_picker_windows: ^0.2.1+1
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
