--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,6 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.6
   flutter_svg: ^2.0.9
-  google_nav_bar: ^5.0.6
   dotted_border: ^2.1.0
   cached_network_image: ^3.3.0
   intl_phone_number_input: ^0.7.3+1
@@ -48,7 +47,9 @@ dependencies:
   provider: ^6.1.1
   image_picker: ^1.0.4
   image_picker_windows: ^0.2.1+1
-  intl: ^0.18.1
+  intl: ^0.19.0
+  expandable: ^5.0.1
+  flutter_adaptive_scaffold: ^0.1.7+2
 
 dev_dependencies:
   flutter_test:
@@ -59,7 +60,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
