--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   image_picker_platform_interface: any
   vector_graphics: any
   file_picker: ^6.1.1
+  video_player: ^2.8.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
