--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   vector_graphics: any
   file_picker: ^6.1.1
   video_player: ^2.8.2
+  socket_io_client: ^2.0.3+1
+  flutter_slidable: ^3.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
