--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   video_player: ^2.8.2
   socket_io_client: ^2.0.3+1
   flutter_slidable: ^3.0.1
+  chips_input: ^0.1.0
+  smooth_page_indicator: ^1.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
