--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,8 +49,7 @@ dependencies:
   image_picker_windows: ^0.2.1+1
   intl: ^0.19.0
   expandable: ^5.0.1
-  flutter_adaptive_scaffold: ^0.1.7+2
-
+  flutter_adaptive_scaffold: ^0.1.8
   http: any
   image_picker_platform_interface: any
   vector_graphics: any
