--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   flutter_slidable: ^3.0.1
   chips_input: ^0.1.0
   smooth_page_indicator: ^1.1.0
+  google_fonts: ^6.2.0
+  percent_indicator: ^4.2.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -87,6 +89,7 @@ flutter:
     - assets/svg/
     - assets/png/
     - assets/jpg/
+    
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -99,16 +102,17 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: JosefinSans
+      fonts:
+        - asset: assets/fonts/JosefinSans-Bold.ttf
+        - asset: assets/fonts/JosefinSans-Regular.ttf
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
+    - family: DMSans
+      fonts:
+        - asset: assets/fonts/DMSans-Bold-BF64376d32191f2.ttf
+        - asset: assets/fonts/DMSans-Medium-BF64376d329a539.ttf
+        - asset: assets/fonts/DMSans-Regular-BF64376d323f095.ttf
   #         weight: 700
   #
   # For details regarding fonts from package dependencies,
