--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   flutter_slidable: ^3.0.1
   chips_input: ^0.1.0
   smooth_page_indicator: ^1.1.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -99,17 +100,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: DMSans
+      fonts:
+      - asset: assets/fonts/DMSans-Regular-BF64376d323f095.ttf
+    #- asset: assets/fonts/DMSans-Bold-BF64376d32191f2.ttf
+    #- asset: assets/fonts/DMSans-Medium-BF64376d329a539.ttf
+    
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
